--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: A developer website
 # User settings
 username: Nicolas Battaglia
 user_description: Bicycle rights irony actually neutra typewriter lyft. Man bun taxidermy put a bird on it, umami yr ramps pop-up ugh bushwick chia lo-fi. Occupy bitters pour-over snackwave you probably haven't heard of them small batch. Cornhole mustache man bun letterpress echo park VHS.
-user_title: Software Developer
+user_title: Software Engineer
 email: nicobatt@hotmail.com
 github_username:  https://github.com/zk182
 linkedin_username:  https://www.linkedin.com/in/nicobattaglia
