--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: A developer website
 
 # User settings
 username: Nicolas Battaglia
-user_description: Bicycle rights irony actually neutra typewriter lyft. Man bun taxidermy put a bird on it, umami yr ramps pop-up ugh bushwick chia lo-fi. Occupy bitters pour-over snackwave you probably haven't heard of them small batch. Cornhole mustache man bun letterpress echo park VHS.
+user_description: My only purpose right now -> Gisela's ass <span class="love">❤</span>
 user_title: Software Engineer
 email: nicobatt@hotmail.com
 github_username:  https://github.com/zk182
